experimental/ir/testdata/options/utf8.proto.stderr.txt
error: non-UTF-8 string literal
  --> testdata/options/utf8.proto:8:51
   |
 8 | option (e).default = "this is not a valid escape: \xff";
   |                                                   ^^^^ non-UTF-8 byte
 9 | option (e).verify = "this is not a valid escape: \xff";
...
13 |     string default = 1;
   |     ------------------- this field requires a UTF-8 string
   |
  ::: testdata/options/utf8.proto:2:11
   |
 2 | edition = "2023";
   |           ------ UTF-8 required here

error: non-UTF-8 string literal
  --> testdata/options/utf8.proto:9:50
   |
 9 |   option (e).verify = "this is not a valid escape: \xff";
   |                                                    ^^^^ non-UTF-8 byte
10 |   option (e).none = "this one is valid here: \xff";
...
13 |       string default = 1;
14 | /     string verify = 2 [
15 | |         features.utf8_validation = VERIFY
   | |                                    ------ UTF-8 required here
16 | |     ];
   | \______- this field requires a UTF-8 string

encountered 2 errors
